# crm

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  handoff.md  hendoff.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  README.md  manage.py
backend/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  staff_serializers.py  staff_urls.py  staff_views.py  urls.py  views.py
backend/attendance/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/automation/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/bookings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/branches/: admin.py  apps.py  models.py
backend/channels/: admin.py  apps.py  choices.py  gateway_client.py  gateway_services.py  gateway_views.py  max_client.py  models.py  serializers.py  services.py  urls.py  views.py  webhook_urls.py  webhooks.py
backend/clients/: admin.py  apps.py  import_1c.py  models.py  profile_serializers.py  serializers.py  urls.py  views.py
backend/companies/: admin.py  apps.py  models.py  serializers.py  (+2 more)
deploy/: .gitignore  backend-entrypoint.sh  bring-up.sh  server-bootstrap.sh
docs/: README.md  crm-funnels.md  crm-workflow-scenario.md  database-schema-summary.md  overview.md  roadmap.md
frontend/: .env.example  Dockerfile  README.md  middleware.ts  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
gateway/: .env.example  Dockerfile  package-lock.json  package.json
(+561 files in other folders)
