[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-kit"
version = "0.1.0"
description = "CRM Kit modular SaaS platform"
requires-python = ">=3.13"
dependencies = [
  "Django>=5.1,<6.0",
  "djangorestframework>=3.15,<4.0",
  "django-ninja>=1.3,<2.0",
  "django-unfold>=0.56,<1.0",
  "Pillow>=11.0,<12.0",
  "psycopg[binary]>=3.2,<4.0",
  "requests>=2.32,<3.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
